[project]
name = "enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
